<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TaskViewFragment">

    <TextView
        android:id="@+id/taskTitle"
        style="@style/Base.Widget.AppCompat.TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDescription"
        style="@style/Base.Widget.AppCompat.TextView.subHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitle" />

    <TextView
        android:id="@+id/taskPriority"
        style="@style/Base.Widget.AppCompat.TextView.subHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDescription" />

    <TextView
        android:id="@+id/taskDueDate"
        style="@style/Base.Widget.AppCompat.TextView.subHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_due_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskPriority" />

    <TextView
        android:id="@+id/taskStatus"
        style="@style/Base.Widget.AppCompat.TextView.subHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDueDate" />

    <Button
        android:id="@+id/btn_change_due_date"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/change_due_date"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/my_light_primary"
        app:layout_constraintEnd_toStartOf="@id/btnChangePriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskStatus" />

    <Button
        android:id="@+id/btnChangePriority"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/change_priority"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/my_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_change_due_date"
        app:layout_constraintTop_toBottomOf="@id/taskStatus" />

    <Button
        android:id="@+id/btnMarkAsDone"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="0.5"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/mark_completed"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/my_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/btn_change_due_date" />

    <Button
        android:id="@+id/btnDelete"
        app:layout_constraintHorizontal_weight="0.5"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/my_light_primary"
        app:layout_constraintEnd_toStartOf="@id/btnMarkAsDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_due_date" />

</androidx.constraintlayout.widget.ConstraintLayout>
